# PRO1

./: CMakeLists.txt  P44649.cpp  README.md  X64150.cpp  X75807.cpp  index_generator.py
Consolidation 1/: P19991.cpp  P24080.cpp  P57315.cpp  P61061.cpp  P72484.cpp  P76024.cpp  P87323.cpp  P96589.cpp  P96767.cpp  X50286.cpp  X80452.cpp  X80452v2.cpp  X80452v3.cpp  X84338.cpp  X98097.cpp
Other resources/: kantan.md
P0 - First contact/: Hello_and_Bye!-X64734.cpp  P99182.cpp  Promedio-P99182.cpp  X64734.cpp
P1 - Introduction/: Add_one_second-P34279.cpp  Classification_of_characters_(1)-P42042.cpp  Comparison_of_words-P90226.cpp  Control_C101A-P37297.cpp  Control_C101AP37297-V2.cpp  Control_C102A-P82374.cpp  Elementos-P51352.cpp  How_many_seconds_are_they-P70955.cpp  Integer_division...-P48107.cpp  Intervals-1-P51126.cpp  Intervals-2-P56559.cpp  Intervals-3-P89265.cpp  Leap_years-P61634.cpp  Maximum_of_three_integer_numbers-P90615.cpp  Minimum_of_two_integers-X54725.cpp  P15613.cpp  P15613v2.cpp  P34279.cpp  P34279v2.cpp  P37297.cpp  P37297v2.cpp  P37469.cpp  P42042.cpp  P42042v2.cpp  P48107.cpp  P51126.cpp  P51126v2.cpp  P51126v3.cpp  P51352.cpp  P56559.cpp  P61634.cpp  P70955.cpp  P82374.cpp  P89265.cpp  P90226.cpp  P90615.cpp  P92613.cpp  P98960.cpp  Rounding-P92613.cpp  Temperatures-P15613.cpp  (+3 more)
P10 - Fundamental Algorithms & Advanced Exercises/: P81966.cpp
P2 - First Loops/: Control_C201B-P64976.cpp  First_numbers-P37500.cpp  Harmonic_numbers-1-P59539.cpp  Multiplication_table-P31170.cpp  Numbers_in_an_interval-P97156.cpp  P27341.cpp  P28754.cpp  P31170.cpp  P34451.cpp  P36668.cpp  P37500.cpp  P38614.cpp  P39057.cpp  P50327.cpp  P55622.cpp  P55622v2.cpp  P59539.cpp  P59875.cpp  P60816.cpp  P64976.cpp  P65171.cpp  P74398.cpp  P78142.cpp  P97156.cpp  P97969.cpp  Sum_of_squares-P36668.cpp  Top_to_bottom-P59875.cpp  X32391.cpp
P3 - More Loops/: P13623.cpp  P29973.cpp  P32533.cpp  P32533v2.cpp  P33839.cpp  P42280.cpp  P58153.cpp  P79817.cpp  P80660.cpp  P85370.cpp  P87198.cpp  P87198v2.cpp  X01646.cpp  X08783.cpp  X59091.cpp
P4.1 - Sequence basics/: P12061.cpp  P23001.cpp  P31111.cpp  P32046.cpp  P39225.cpp  P39308.cpp  P48713.cpp  P65103.cpp  P67454.cpp  P75149.cpp  P79784.cpp  P89078.cpp  P89872.cpp
P4.2 - Sequence extension/:  P89979.cpp  P17179.cpp  P35957.cpp  P49603.cpp  P71753.cpp  P73501.cpp  P87523.cpp  P90620.cpp
P5 - Functions & Procedures/: P21281.cpp  P22654.cpp  P24381.cpp  P33371.cpp  P34091.cpp  P37760.cpp  P38045.cpp  P50095.cpp  P57474.cpp  P58459.cpp  P58653.cpp  P59652.cpp  P65437.cpp  P73231.cpp  P77686.cpp  P95401.cpp  X00639.cpp  X04437.cpp  X06314.cpp  X46340.cpp  X58169.cpp
P6 - Recursion/: P10694.cpp  P12509.cpp  P20006.cpp  P22467.cpp  P26041.cpp  P35537.cpp  P38877.cpp  P51222.cpp  P52926.cpp  P56549.cpp  P62467.cpp  P71398.cpp  P89336.cpp  P96965.cpp  X50141.cpp
P7 - Vectors/: P12675.cpp  P14130.cpp  P24301.cpp  P29428.cpp  P50036.cpp  P50497.cpp  P63414.cpp  P67268.cpp  P71310.cpp  P85480.cpp  P87920.cpp  P89407.cpp  P99133.cpp  X09467.cpp  X20419.cpp  X41120.cpp
P8 - Multidimensional arrays/: P16893.cpp  P18660.cpp  P27498.cpp  P28318.cpp  P37390.cpp  P42596.cpp  P43260.cpp  P45829.cpp  P67340.cpp  P87801.cpp  P88905.cpp  P92844.cpp  X12847.cpp  X17276.cpp
P9 - Data Structures (tuples)/: P11141.cpp  P14343.cpp  P26141.cpp  P45616.cpp  P46254.cpp  P56358.cpp  P56635.cpp  P81104.cpp  P82952.cpp  P84786.cpp  P85696.cpp  P93090.cpp
exams/18-19 Q1 C1 T1/: X76659.cpp  X88700.cpp  X98837.cpp
exams/18-19 Q1 C2 T1/: X38406.cpp  X50988.cpp  X93938.cpp
exams/18-19 Q1 C2 T2/: X30226.cpp  X57795.cpp
exams/18-19 Q1 C3 T1/: X28106.cpp  X58537.cpp  X79058.cpp
exams/18-19 Q2 C2/: X44326.cpp  X74981.cpp  X99068.cpp
exams/19-20 Q1 C1 T1/: X72571.cpp  X96982.cpp  X97193.cpp
exams/19-20 Q1 C2/: X41188.cpp  X50401.cpp  X69939.cpp  X86604.cpp
exams/19-20 Q1 C2 T2/: X11881.cpp  X19753.cpp
exams/19-20 Q1 F/: X53931.cpp  X79308.cpp  X93037.cpp
exams/19-20 Q2 C2/: X20570.cpp  X25951.cpp  X84724.cpp  X90132.cpp
exams/19-20 Q2 C3/: X31870.cpp  X36692.cpp  X40262.cpp  X89960.cpp
exams/19-20 Q2 F/: X13529.cpp  X28191.cpp  X29235.cpp  X99393.cpp
exams/20-21 Q1 C1 T1/: X12568.cpp  X63529.cpp  X81743.cpp
exams/20-21 Q1 C2 T1/: X10549.cpp  X16146.cpp  X80481.cpp
exams/20-21 Q1 C3 T1/: X23243.cpp  X38881.cpp  X58714.cpp  X90063.cpp
exams/20-21 Q2 C2 T1/: X82423.cpp  X90689.cpp  X93206.cpp
exams/20-21 Q2 C3 T1/: X21943.cpp  X43191.cpp  X59349.cpp
non-classified/: P92351.cpp
