cmake_minimum_required(VERSION 3.20)
project(PRO1)

set(CMAKE_CXX_STANDARD 14)
add_executable(P92351 non-classified/P92351.cpp)
add_executable(P99182 "P0 - First contact/P99182.cpp")
add_executable(X64734 "P0 - First contact/X64734.cpp")
add_executable(P15613 "P1 - Introduction/P15613.cpp")
add_executable(P15613v2 "P1 - Introduction/P15613v2.cpp")
add_executable(P34279 "P1 - Introduction/P34279.cpp")
add_executable(P34279v2 "P1 - Introduction/P34279v2.cpp")
add_executable(P37297 "P1 - Introduction/P37297.cpp")
add_executable(P37297v2 "P1 - Introduction/P37297v2.cpp")
add_executable(P37469 "P1 - Introduction/P37469.cpp")
add_executable(P42042 "P1 - Introduction/P42042.cpp")
add_executable(P42042v2 "P1 - Introduction/P42042v2.cpp")
add_executable(P48107 "P1 - Introduction/P48107.cpp")
add_executable(P51126 "P1 - Introduction/P51126.cpp")
add_executable(P51352 "P1 - Introduction/P51352.cpp")
add_executable(P56559 "P1 - Introduction/P56559.cpp")
add_executable(P61634 "P1 - Introduction/P61634.cpp")
add_executable(P70955 "P1 - Introduction/P70955.cpp")
add_executable(P82374 "P1 - Introduction/P82374.cpp")
add_executable(P89265 "P1 - Introduction/P89265.cpp")
add_executable(P90226 "P1 - Introduction/P90226.cpp")
add_executable(P90615 "P1 - Introduction/P90615.cpp")
add_executable(P92613 "P1 - Introduction/P92613.cpp")
add_executable(P98960 "P1 - Introduction/P98960.cpp")
add_executable(X54725 "P1 - Introduction/X54725.cpp")
add_executable(P31170 "P2 - First Loops/P31170.cpp")
add_executable(P36668 "P2 - First Loops/P36668.cpp")
add_executable(P37500 "P2 - First Loops/P37500.cpp")
add_executable(P55622 "P2 - First Loops/P55622.cpp")
add_executable(P59539 "P2 - First Loops/P59539.cpp")
add_executable(P59875 "P2 - First Loops/P59875.cpp")
add_executable(P64976 "P2 - First Loops/P64976.cpp")
add_executable(P97156 "P2 - First Loops/P97156.cpp")
add_executable(P51126v2 "P1 - Introduction/P51126v2.cpp")