cmake_minimum_required(VERSION 3.20)
project(PRO1)

set(CMAKE_CXX_STANDARD 14)

add_executable(P92351 non-classified/P92351.cpp)
add_executable(P99182 "P0 - First contact/P99182.cpp")
add_executable(X64734 "P0 - First contact/X64734.cpp")
add_executable(P15613 "P1 - Introduction/P15613.cpp")
add_executable(P15613v2 "P1 - Introduction/P15613v2.cpp")
add_executable(P34279 "P1 - Introduction/P34279.cpp")
add_executable(P34279v2 "P1 - Introduction/P34279v2.cpp")
add_executable(P37297 "P1 - Introduction/P37297.cpp")
add_executable(P37297v2 "P1 - Introduction/P37297v2.cpp")
add_executable(P37469 "P1 - Introduction/P37469.cpp")
add_executable(P42042 "P1 - Introduction/P42042.cpp")
add_executable(P42042v2 "P1 - Introduction/P42042v2.cpp")
add_executable(P48107 "P1 - Introduction/P48107.cpp")
add_executable(P51126 "P1 - Introduction/P51126.cpp")
add_executable(P51352 "P1 - Introduction/P51352.cpp")
add_executable(P56559 "P1 - Introduction/P56559.cpp")
add_executable(P61634 "P1 - Introduction/P61634.cpp")
add_executable(P70955 "P1 - Introduction/P70955.cpp")
add_executable(P82374 "P1 - Introduction/P82374.cpp")
add_executable(P89265 "P1 - Introduction/P89265.cpp")
add_executable(P90226 "P1 - Introduction/P90226.cpp")
add_executable(P90615 "P1 - Introduction/P90615.cpp")
add_executable(P92613 "P1 - Introduction/P92613.cpp")
add_executable(P98960 "P1 - Introduction/P98960.cpp")
add_executable(X54725 "P1 - Introduction/X54725.cpp")
add_executable(P31170 "P2 - First Loops/P31170.cpp")
add_executable(P36668 "P2 - First Loops/P36668.cpp")
add_executable(P37500 "P2 - First Loops/P37500.cpp")
add_executable(P55622 "P2 - First Loops/P55622.cpp")
add_executable(P59539 "P2 - First Loops/P59539.cpp")
add_executable(P59875 "P2 - First Loops/P59875.cpp")
add_executable(P64976 "P2 - First Loops/P64976.cpp")
add_executable(P97156 "P2 - First Loops/P97156.cpp")
add_executable(P51126v2 "P1 - Introduction/P51126v2.cpp")




add_executable(P55622v2 "P2 - First Loops/P55622v2.cpp")
add_executable(P74398 "P2 - First Loops/P74398.cpp")
add_executable(P50327 "P2 - First Loops/P50327.cpp")
add_executable(P28754 "P2 - First Loops/P28754.cpp")
add_executable(P60816 "P2 - First Loops/P60816.cpp")
add_executable(P39057 "P2 - First Loops/P39057.cpp")
add_executable(X32391 "P2 - First Loops/X32391.cpp")
add_executable(P97969 "P2 - First Loops/P97969.cpp")
add_executable(P51126v3 "P1 - Introduction/P51126v3.cpp")
add_executable(P78142 "P2 - First Loops/P78142.cpp")
add_executable(P65171 "P2 - First Loops/P65171.cpp")
add_executable(P38614 "P2 - First Loops/P38614.cpp")
add_executable(P34451 "P2 - First Loops/P34451.cpp")
add_executable(P27341 "P2 - First Loops/P27341.cpp")
add_executable(P79817 "P3 - More Loops/P79817.cpp")
add_executable(X08783 "P3 - More Loops/X08783.cpp")
add_executable(P33839 "P3 - More Loops/P33839.cpp")
add_executable(X01646 "P3 - More Loops/X01646.cpp")
add_executable(P29973 "P3 - More Loops/P29973.cpp")
add_executable(P32533 "P3 - More Loops/P32533.cpp")
add_executable(P42280 "P3 - More Loops/P42280.cpp")
add_executable(P13623 "P3 - More Loops/P13623.cpp")