cmake_minimum_required(VERSION 3.20)
project(PRO1)

#set(CMAKE_CXX_STANDARD 14)

add_executable(P92351 non-classified/P92351.cpp)
add_executable(P99182 "P0 - First contact/P99182.cpp")
add_executable(X64734 "P0 - First contact/X64734.cpp")
add_executable(P15613 "P1 - Introduction/P15613.cpp")
add_executable(P15613v2 "P1 - Introduction/P15613v2.cpp")
add_executable(P34279 "P1 - Introduction/P34279.cpp")
add_executable(P34279v2 "P1 - Introduction/P34279v2.cpp")
add_executable(P37297 "P1 - Introduction/P37297.cpp")
add_executable(P37297v2 "P1 - Introduction/P37297v2.cpp")
add_executable(P37469 "P1 - Introduction/P37469.cpp")
add_executable(P42042 "P1 - Introduction/P42042.cpp")
add_executable(P42042v2 "P1 - Introduction/P42042v2.cpp")
add_executable(P48107 "P1 - Introduction/P48107.cpp")
add_executable(P51126 "P1 - Introduction/P51126.cpp")
add_executable(P51352 "P1 - Introduction/P51352.cpp")
add_executable(P56559 "P1 - Introduction/P56559.cpp")
add_executable(P61634 "P1 - Introduction/P61634.cpp")
add_executable(P70955 "P1 - Introduction/P70955.cpp")
add_executable(P82374 "P1 - Introduction/P82374.cpp")
add_executable(P89265 "P1 - Introduction/P89265.cpp")
add_executable(P90226 "P1 - Introduction/P90226.cpp")
add_executable(P90615 "P1 - Introduction/P90615.cpp")
add_executable(P92613 "P1 - Introduction/P92613.cpp")
add_executable(P98960 "P1 - Introduction/P98960.cpp")
add_executable(X54725 "P1 - Introduction/X54725.cpp")
add_executable(P31170 "P2 - First Loops/P31170.cpp")
add_executable(P36668 "P2 - First Loops/P36668.cpp")
add_executable(P37500 "P2 - First Loops/P37500.cpp")
add_executable(P55622 "P2 - First Loops/P55622.cpp")
add_executable(P59539 "P2 - First Loops/P59539.cpp")
add_executable(P59875 "P2 - First Loops/P59875.cpp")
add_executable(P64976 "P2 - First Loops/P64976.cpp")
add_executable(P97156 "P2 - First Loops/P97156.cpp")
add_executable(P51126v2 "P1 - Introduction/P51126v2.cpp")




add_executable(P55622v2 "P2 - First Loops/P55622v2.cpp")
add_executable(P74398 "P2 - First Loops/P74398.cpp")
add_executable(P50327 "P2 - First Loops/P50327.cpp")
add_executable(P28754 "P2 - First Loops/P28754.cpp")
add_executable(P60816 "P2 - First Loops/P60816.cpp")
add_executable(P39057 "P2 - First Loops/P39057.cpp")
add_executable(X32391 "P2 - First Loops/X32391.cpp")
add_executable(P97969 "P2 - First Loops/P97969.cpp")
add_executable(P51126v3 "P1 - Introduction/P51126v3.cpp")
add_executable(P78142 "P2 - First Loops/P78142.cpp")
add_executable(P65171 "P2 - First Loops/P65171.cpp")
add_executable(P38614 "P2 - First Loops/P38614.cpp")
add_executable(P34451 "P2 - First Loops/P34451.cpp")
add_executable(P27341 "P2 - First Loops/P27341.cpp")
add_executable(P79817 "P3 - More Loops/P79817.cpp")
add_executable(X08783 "P3 - More Loops/X08783.cpp")
add_executable(P33839 "P3 - More Loops/P33839.cpp")
add_executable(X01646 "P3 - More Loops/X01646.cpp")
add_executable(P29973 "P3 - More Loops/P29973.cpp")
add_executable(P32533 "P3 - More Loops/P32533.cpp")
add_executable(P42280 "P3 - More Loops/P42280.cpp")
add_executable(P13623 "P3 - More Loops/P13623.cpp")
add_executable(P87198 "P3 - More Loops/P87198.cpp")
add_executable(P58153 "P3 - More Loops/P58153.cpp")
add_executable(P80660 "P3 - More Loops/P80660.cpp")
add_executable(X59091 "P3 - More Loops/X59091.cpp")
add_executable(P67454 "P4.1 - Sequence basics/P67454.cpp")
add_executable(P75149 "P4.1 - Sequence basics/P75149.cpp")
add_executable(P79784 "P4.1 - Sequence basics/P79784.cpp")
add_executable(P89078 "P4.1 - Sequence basics/P89078.cpp")
add_executable(P32046 "P4.1 - Sequence basics/P32046.cpp")
add_executable(P39225 "P4.1 - Sequence basics/P39225.cpp")
add_executable(P65103 "P4.1 - Sequence basics/P65103.cpp")
add_executable(P85370 "P3 - More Loops/P85370.cpp")
add_executable(P48713 "P4.1 - Sequence basics/P48713.cpp")
add_executable(P31111 "P4.1 - Sequence basics/P31111.cpp")
add_executable(P23001 "P4.1 - Sequence basics/P23001.cpp")
add_executable(P12061 "P4.1 - Sequence basics/P12061.cpp")
add_executable(P89872 "P4.1 - Sequence basics/P89872.cpp")
add_executable(P39308 "P4.1 - Sequence basics/P39308.cpp")
add_executable(P87198v2 "P3 - More Loops/P87198v2.cpp")
add_executable(P32533v2 "P3 - More Loops/P32533v2.cpp")

add_executable(P57315 "Consolidation 1/P57315.cpp")
add_executable(P96589 "Consolidation 1/P96589.cpp")
add_executable(X98097 "Consolidation 1/X98097.cpp")
add_executable(P19991 "Consolidation 1/P19991.cpp")
add_executable(P76024 "Consolidation 1/P76024.cpp")
add_executable(P24080 "Consolidation 1/P24080.cpp")
add_executable(X80452 "Consolidation 1/X80452.cpp")
add_executable(X80452v2 "Consolidation 1/X80452v2.cpp")
add_executable(X80452v3 "Consolidation 1/X80452v3.cpp")
add_executable(X50286 "Consolidation 1/X50286.cpp")
add_executable(X84338 "Consolidation 1/X84338.cpp")
add_executable(P96767 "Consolidation 1/P96767.cpp")
add_executable(P61061 "Consolidation 1/P61061.cpp")
add_executable(P72484 "Consolidation 1/P72484.cpp")
add_executable(P87323 "Consolidation 1/P87323.cpp")
add_executable(P87523 "P4.2 - Sequence extension/P87523.cpp")
add_executable(P17179 "P4.2 - Sequence extension/P17179.cpp")
add_executable(P90620 "P4.2 - Sequence extension/P90620.cpp")
add_executable(P71753 "P4.2 - Sequence extension/P71753.cpp")
add_executable(P73501 "P4.2 - Sequence extension/P73501.cpp")
add_executable(P35957 "P4.2 - Sequence extension/P35957.cpp")
add_executable( P89979 "P4.2 - Sequence extension/ P89979.cpp")
add_executable(P49603 "P4.2 - Sequence extension/P49603.cpp")
add_executable(P38045 "P5 - Functions & Procedures/P38045.cpp")
add_executable(P37760 "P5 - Functions & Procedures/P37760.cpp")
add_executable(X04437 "P5 - Functions & Procedures/X04437.cpp")
add_executable(X63529 "exams/20-21 Q1 C1 T1/X63529.cpp")
add_executable(X81743 "exams/20-21 Q1 C1 T1/X81743.cpp")
add_executable(X12568 "exams/20-21 Q1 C1 T1/X12568.cpp")
add_executable(X97193 "exams/19-20 Q1 C1 T1/X97193.cpp")
add_executable(X72571 "exams/19-20 Q1 C1 T1/X72571.cpp")
add_executable(X88700 "exams/18-19 Q1 C1 T1/X88700.cpp")
add_executable(X98837 "exams/18-19 Q1 C1 T1/X98837.cpp")
add_executable(X76659 "exams/18-19 Q1 C1 T1/X76659.cpp")
add_executable(X46340 "P5 - Functions & Procedures/X46340.cpp")
add_executable(P73231 "P5 - Functions & Procedures/P73231.cpp")
add_executable(P95401 "P5 - Functions & Procedures/P95401.cpp")
add_executable(P58459 "P5 - Functions & Procedures/P58459.cpp")
add_executable(P77686 "P5 - Functions & Procedures/P77686.cpp")
add_executable(P59652 "P5 - Functions & Procedures/P59652.cpp")
add_executable(P65437 "P5 - Functions & Procedures/P65437.cpp")
add_executable(P57474 "P5 - Functions & Procedures/P57474.cpp")
add_executable(P22654 "P5 - Functions & Procedures/P22654.cpp")
add_executable(X00639 "P5 - Functions & Procedures/X00639.cpp")
add_executable(P58653 "P5 - Functions & Procedures/P58653.cpp")
add_executable(P24381 "P5 - Functions & Procedures/P24381.cpp")
add_executable(P34091 "P5 - Functions & Procedures/P34091.cpp")
add_executable(P21281 "P5 - Functions & Procedures/P21281.cpp")
add_executable(P50095 "P5 - Functions & Procedures/P50095.cpp")